Correct typ grid with fontFamilyCode align with 1.1.2

--- a/example/theme/src/@desinax/typographic-grid/less/typography-defaults.less
+++ b/example/theme/src/@desinax/typographic-grid/less/typography-defaults.less
@@ -260,7 +260,7 @@
         samp,
         .code {
             //font-size: @fontSizeCodeInline;
-            font-family: @fontFamilyMonospace;
+            font-family: @fontFamilyCode;
         }
 
         code,
